<resources>
    <string name="app_name">OpenSnap</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title">OpenSnap</string>
    <string name="login">Login</string>
    <string name="pword">Password</string>
    <string name="logged_in_state">Logged in!</string>
    <string name="update">Update</string>
    <string name="logout">Logout</string>
    <string name="snaps">Snaps</string>
    <string name="contacts">Contacts</string>
    <string name="sign_out">Sign Out</string>
    <string name="left_descriptor">Left Arrow</string>
    <string name="right_descriptor">Right Arrow</string>
    <string name="new_snap">New Snap</string>
    <string name="receive_prompt">Gimme Dat Snap</string>
    <string name="title_activity_media_preview">Picture Snap</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_video_preview">Video Snap</string>
    <string name="download">Download</string>
    <string name="view">View</string>
    <string name="pref_preview_key">pref_preview</string>
    <string name="pref_preview_title">Use external previewer</string>
    <string name="pref_preview_desc">Media previews can be launched in OpenSnap or an external App of your choice.</string>
    <string name="title_activity_compose_snap">ComposeSnap</string>
    <string name="compose_snap_menu_title">New Snap</string>
    <string name="compose_snap_camera">android\ncamera.</string>
    <string name="compose_snap_select">select \nfrom library.</string>
    <string name="pref_login_file_key">com.saltisgood.opensnap.LOGIN_PREF_FILE</string>
    <string name="pref_login_user_key">pref_login_key</string>
    <string name="pref_login_pword_key">pref_login_pword_key</string>
    <string name="pref_login_auth_key">pref_login_auth_key</string>
    <string name="pref_login_logged_key">pref_login_logged_key</string>
    <string name="snap_img_text">Your snap</string>
    <string name="send_prompt">Send</string>
    <string name="pref_dl_key">pref_dl_key</string>
    <string name="pref_dl_title">Always Download Snaps</string>
    <string name="pref_dl_desc">Automatically download Snaps if they\'re available.</string>
    <string name="snap_thread_sent_desc">Your Snap</string>
    <string name="snap_thread_receive_desc">Friend\'s Snap</string>
    <string name="recip_prompt">Choose the recipients</string>
    <string name="send_button_prompt">No recipients selected</string>
    <string name="delete">Delete Snap</string>
    <string name="pref_snapstokeep_key">pref_snapstokeep_key</string>
    <string name="pref_snapstokeep_title">Snap List Size</string>
    <string name="pref_snapstokeep_desc">The number of Snaps to keep in the cloud feed before OpenSnap automatically clears them.</string>
    <string name="creator_text">Created by Nick Stephen</string>
    <string name="pref_allow_save_key">pref_allow_save_key</string>
    <string name="pref_allow_save_title">Save Snaps</string>
    <string name="pref_allow_save_desc">Save Snaps to your SD-Card when they\'re downloaded and keep them ;)</string>
    <string name="pref_time_key">pref_time_key</string>
    <string name="pref_time_title">Ignore Snap Timing</string>
    <string name="pref_time_desc">Display Snaps for as long as you want.</string>
    <string name="waiting_title">Uploading&#8230;</string>
    <string name="resend_previous">resend.</string>
    <string name="snap_cam_button_text">opensnap\ncamera.</string>
    <string name="drawer_open">drawer open</string>
    <string name="drawer_close">drawer close</string>
    <string name="pref_cat_snap_options">Snap Options</string>
    <string name="pref_cat_snap_uploads">Uploads</string>
    <string name="pref_upload_not_key">pref_upload_not_key</string>
    <string name="pref_upload_not_title">Notifications</string>
    <string name="pref_upload_not_desc">Display a notification when uploading Snaps</string>
    <string name="pref_cat_snap_special">Premium</string>
    <string name="pref_cat_snap_special_key">premium_cat</string>
    <string name="pref_cat_snap_downloads">Downloads</string>
    <string name="pref_download_not_key">pref_download_not_key</string>
    <string name="pref_download_not_title">Notifications</string>
    <string name="pref_download_not_desc">Display a notification when downloading Snaps</string>
    <string name="pref_cat_snap_compat">SnapChat Compatibility</string>
    <string name="pref_cat_gui">GUI Stuff</string>
    <string name="pref_theme_key">pref_theme_key</string>
    <string name="pref_theme_title">Theme</string>
    <string name="pref_theme_desc">The theme to use in the App</string>
    <string name="pref_theme_default">default</string>
    <string name="pref_refresh_key">pref_refresh_key</string>
    <string name="pref_refresh_title">Refresh Time</string>
    <string name="pref_refresh_desc">Mininum time (minutes) between refreshes</string>
    <string name="pref_auto_refresh_key">pre_auto_refresh_key</string>
    <string name="pref_auto_refresh_title">Automatically Refresh</string>
    <string name="pref_auto_refresh_desc">Automatically refresh the Snap list</string>
    <string name="activity_snapdialog_label">SnapDialog</string>
    <string name="pref_markopen_key">pref_markopen_key</string>
    <string name="pref_markopen_title">Private Mode</string>
    <string name="pref_markopen_desc">Don\'t send Snap opened messages</string>
    <string name="pref_update_toast_key">pref_update_toast_key</string>
    <string name="pref_update_toast_title">Show Toast on Update</string>
    <string name="pref_update_toast_desc">Display a toast telling you how many new Snaps you have on an update</string>
    <string name="pref_addtolibrary_key">pref_addtolibrary_key</string>
    <string name="pref_addtolibrary_title">Add to Android Library</string>
    <string name="pref_addtolibrary_desc">Add any downloaded Snaps to your phone\'s media library</string>
    <string name="options">Options</string>
    <string name="logo_desc">OpenSnap logo</string>
    <string name="newsnap_desc">New Snap</string>
    <string name="snaps_desc">Snaps</string>
    <string name="contacts_desc">Contacts</string>
    <string name="clear_feed_menu">Clear Feed</string>
    <string name="contact_drawer_title">Snap Preview</string>
    <string name="contact_drawer_img_desc">Snap Preview</string>
    <string name="snap_draw_desc">Draw your Snap!</string>
    <string name="color_picker_title">Colour Picker</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="color_display_desc">Colour Display</string>
    <string name="new_snap_button">new \nsnap.</string>
    <string name="snap_list">snap\nlist.</string>
    <string name="contact_list">contact\nlist.</string>
    <string name="not_logged_desc">Please login</string>
    <string name="time_picker_title">Choose the Snap\'s display time:</string>
    <string name="footer_button_text">More&#8230;</string>
    <string name="sd_warning_title">Warning!</string>
    <string name="sd_warning_text">External storage is not currently available! Please mount the external storage drive to allow Snap saving/ viewing.</string>
    <string name="sd_warning_prompt_message">Do not show again</string>
    <string name="header_button_text">Send Snap</string>
    <string name="pref_local_feed_save_key">pref_local_feed_save_key</string>
    <string name="pref_local_feed_save_title">Keep local feed</string>
    <string name="pref_local_feed_save_desc">Keep a local copy of your snap list so that it won\'t reset upon clearing cloud feed and you can see your history</string>
    <string name="no_snaps">No Snaps :(</string>
    <string name="purchase_premium_menu">Get Premium Access</string>
    <string name="video_quality">Video Quality</string>
    <string name="choose_video_quality">Choose video quality</string>
    <string name="other_apps">My Other Apps</string>
    <string name="no_more_tuts">No more tutorials please!</string>
    <string name="close">No Thanks</string>
    <string name="yes">Yes Please</string>
    <string name="welcome">Welcome!</string>
    <string name="tut_prompt">Thanks for downloading OpenSnap. Would you like me to show you around?</string>
    <string name="tut_main_info">This is the main screen. From here you can access all the other parts
    of the app in various ways.\nClick the buttons in the centre, drag the screen or use the drawer.
    \nAlso check out the options in the top right.</string>
    <string name="tut_hint">TIP: Press and hold the tutorials to see behind them!</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="tut_snaps">This is your list of snaps.\n\nTap to load, tap to view. Long click to view options.\n\nYou can always
        view your sent snaps but need premium features to permanently save received snaps.</string>
    <string name="tut_snaps2">Icon Guide:</string>
    <string name="rec_unopen">Received Unopened</string>
    <string name="rec_open">Received Opened</string>
    <string name="sent_unopen">Sent Unopened</string>
    <string name="sent_open">Sent Opened</string>
    <string name="movie">Video Snap</string>
    <string name="view_tut">View Tutorial</string>
    <string name="ready_to_view">Snap Downloaded</string>
    <string name="buy_premium">Access Premium Features</string>
    <string name="tut_contacts">Here are your contacts.\n\nTap to view your conversations or as a
    shortcut to sending them a snap.\n\nMore contact options will be added soon!\n\nAny red crossed
    images mean the snap hasn\'t been saved, so remember to get premium to save them.</string>
    <string name="buy_premium2">Get Premium</string>
    <string name="tut_editor">This is your snap editor\n\nTap to add a caption (also drag it!)\n\n
        Tap the bottom left number to set the display time\n\nTap the pencil to draw, tap again to erase
     and long click to choose a colour</string>
    <string name="tut_contactselect">Tap on a contact to send to one person\n\nTick the boxes to
        select multiple recipients\n\nAfter selecting contacts, long click button to save for later</string>
    <string name="play_supported_key">play_supported_key</string>
    <string name="add_friends">Add Friends</string>
    <string name="vid_low">Low Quality</string>
    <string name="vid_hi">High Quality</string>
    <string name="vid_qcif">Qcif (176 x 144)</string>
    <string name="vid_cif">Cif (352 x 288)</string>
    <string name="vid_480">480p</string>
    <string name="vid_720">720p</string>
    <string name="vid_1080">1080p</string>
    <string name="vid_qvga">QVGA (320 x 240)</string>
    <string-array name="times_array">
        <item>1 Second</item>
        <item>2 Seconds</item>
        <item>3 Seconds</item>
        <item>4 Seconds</item>
        <item>5 Seconds</item>
        <item>6 Seconds</item>
        <item>7 Seconds</item>
        <item>8 Seconds</item>
        <item>9 Seconds</item>
        <item>10 Seconds</item>
    </string-array>
    <string-array name="example_array">
        <item>Home</item>
        <item>New Snap</item>
        <item>Snaps</item>
        <item>Contacts</item>
        <item>Settings</item>
        <item>Refresh</item>
        <item>Sign Out</item>
    </string-array>
    <string-array name="themes_array">
        <item>Default</item>
        <item>Original</item>
        <item>BlackSnap</item>
        <item>SnapChat</item>
    </string-array>
    <string-array name="themes_values">
        <item>default</item>
        <item>original</item>
        <item>dark</item>
        <item>takethat</item>
    </string-array>
</resources>