<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory
        android:title="@string/pref_cat_snap_options">

        <PreferenceScreen
            android:title="@string/pref_cat_snap_special"
            android:key="@string/pref_cat_snap_special_key" >

            <CheckBoxPreference
                android:key="@string/pref_allow_save_key"
                android:title="@string/pref_allow_save_title"
                android:summary="@string/pref_allow_save_desc"
                android:defaultValue="false"/>

            <CheckBoxPreference
                android:key="@string/pref_preview_key"
                android:title="@string/pref_preview_title"
                android:summary="@string/pref_preview_desc"
                android:defaultValue="false" />

            <CheckBoxPreference
                android:key="@string/pref_time_key"
                android:title="@string/pref_time_title"
                android:summary="@string/pref_time_desc"
                android:defaultValue="false"/>

            <CheckBoxPreference
                android:key="@string/pref_markopen_key"
                android:title="@string/pref_markopen_title"
                android:summary="@string/pref_markopen_desc"
                android:defaultValue="false" />

            <CheckBoxPreference
                android:key="@string/pref_addtolibrary_key"
                android:title="@string/pref_addtolibrary_title"
                android:summary="@string/pref_addtolibrary_desc"
                android:defaultValue="true" />

        </PreferenceScreen>

        <PreferenceScreen
            android:title="@string/pref_cat_snap_downloads" >

            <CheckBoxPreference
                android:key="@string/pref_dl_key"
                android:title="@string/pref_dl_title"
                android:summary="@string/pref_dl_desc"
                android:defaultValue="false" />

            <CheckBoxPreference
                android:key="@string/pref_download_not_key"
                android:title="@string/pref_download_not_title"
                android:summary="@string/pref_download_not_desc"
                android:defaultValue="true" />

            <CheckBoxPreference
                android:key="@string/pref_auto_refresh_key"
                android:title="@string/pref_auto_refresh_title"
                android:summary="@string/pref_auto_refresh_desc"
                android:defaultValue="true" />

            <EditTextPreference
                android:key="@string/pref_refresh_key"
                android:title="@string/pref_refresh_title"
                android:summary="@string/pref_refresh_desc"
                android:dependency="@string/pref_auto_refresh_key"
                android:defaultValue="30"
                android:numeric="integer" />

        </PreferenceScreen>

        <PreferenceScreen
            android:title="@string/pref_cat_snap_uploads" >

            <CheckBoxPreference
                android:key="@string/pref_upload_not_key"
                android:title="@string/pref_upload_not_title"
                android:summary="@string/pref_upload_not_desc"
                android:defaultValue="true" />

        </PreferenceScreen>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_cat_snap_compat" >

        <EditTextPreference
            android:key="@string/pref_snapstokeep_key"
            android:title="@string/pref_snapstokeep_title"
            android:summary="@string/pref_snapstokeep_desc"
            android:defaultValue="50"
            android:numeric="integer" />

        <CheckBoxPreference
            android:key="@string/pref_local_feed_save_key"
            android:title="@string/pref_local_feed_save_title"
            android:summary="@string/pref_local_feed_save_desc"
            android:defaultValue="true" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_cat_gui" >

        <ListPreference
            android:key="@string/pref_theme_key"
            android:title="@string/pref_theme_title"
            android:summary="@string/pref_theme_desc"
            android:entries="@array/themes_array"
            android:entryValues="@array/themes_values"
            android:defaultValue="@string/pref_theme_default" />

        <CheckBoxPreference
            android:key="@string/pref_update_toast_key"
            android:title="@string/pref_update_toast_title"
            android:summary="@string/pref_update_toast_desc"
            android:defaultValue="true" />

    </PreferenceCategory>

</PreferenceScreen>
