<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center" >
    
    <VideoView
        android:id="@+id/snap_vid"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:contentDescription="@string/snap_img_text" />
    
    <org.holoeverywhere.widget.EditText
        android:id="@+id/snap_user_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="30dp"
        android:layout_alignParentTop="true"
        android:background="@color/black_half_solid"
        android:gravity="center"
        android:imeOptions="actionDone"
        android:inputType="text|textAutoCorrect|textImeMultiLine"
        android:textColor="@color/white_solid"
        android:visibility="invisible" />

    <org.holoeverywhere.widget.Button
        android:id="@+id/send_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="15dp"
        android:text="@string/send_prompt" />
    
    <ImageView
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_margin="15dp"
        android:contentDescription="@string/hello_world"
        android:src="@drawable/cancel" />

</RelativeLayout>
