<?xml version="1.0" encoding="utf-8"?>
<org.holoeverywhere.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
	<RelativeLayout 
	    android:id="@+id/content_container"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:paddingTop="?attr/actionBarSize" >
	    
	    <org.holoeverywhere.widget.ListView 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content" 
		    android:textSize="20sp"
		    android:id="@android:id/list"
		    android:divider="@drawable/list_divider_dark"
		    android:dividerHeight="4dp"
		    android:layout_above="@+id/button_container"
		    android:layout_below="@+id/textView1" />
	    
	    <org.holoeverywhere.widget.LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:id="@+id/button_container"
	        android:layout_alignParentBottom="true" >

	        <org.holoeverywhere.widget.Button
		        android:id="@+id/send_button"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:enabled="false"
		        android:text="@string/send_button_prompt"
		        android:ellipsize="end"
		        android:maxLines="1" />	        
	        
	    </org.holoeverywhere.widget.LinearLayout>
	    
	    <org.holoeverywhere.widget.TextView
	        android:id="@+id/textView1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentTop="true"
	        android:layout_centerHorizontal="true"
	        android:text="@string/recip_prompt"
	        android:textColor="@android:color/primary_text_light"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
	
	</RelativeLayout>
	
	<RelativeLayout
	    android:layout_width="250dp"
	    android:layout_height="match_parent"
	    android:layout_gravity="start"
	    android:background="@android:color/background_dark"
	    android:paddingTop="?attr/actionBarSize" >
	    
	    <org.holoeverywhere.widget.TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="40dp"
	        android:id="@+id/drawer_title_text"
	        android:layout_centerHorizontal="true"
	        android:textAppearance="?android:attr/textAppearanceLarge"
	        android:text="@string/contact_drawer_title" />
	    
	    <org.holoeverywhere.widget.ProgressBar 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:id="@+id/contact_drawer_pb"
	        android:layout_centerInParent="true" />
	    
	    <ImageView 
	        android:layout_width="match_parent"
	        android:layout_height="match_parent" 
	        android:id="@+id/contact_drawer_img"
	        android:layout_below="@id/drawer_title_text"
	        android:contentDescription="@string/contact_drawer_img_desc"
	        android:padding="10dp"
	        android:visibility="invisible" />
	    
	</RelativeLayout>
</org.holoeverywhere.widget.DrawerLayout>